--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover; 
+            background-attachment: fixed;
+
+            Shorthand - backgroun
+                color > image > position > repeat > [size] > attachment 
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main{
             font-family: Arial, Helvetica, sans-serif;
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,6 +36,14 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium itaque alias impedit ipsum atque fugit est suscipit quibusdam minima eos! Ut reprehenderit tenetur amet dolor est voluptatibus, doloribus culpa similique. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga corrupti ratione alias voluptates exercitationem repellat autem, error architecto cum maiores, laudantium eaque natus culpa. Incidunt nisi quo totam fuga tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quia tempore accusamus. Asperiores sequi debitis nihil. Fuga modi unde eum vel saepe, eaque sint, molestiae labore cupiditate cum temporibus accusamus!</p>
+        
     </main>
     
 </body>
