Fim do módulo 3

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@ body{
 table{
     width: 500px;
     border-collapse: collapse;
+    position: relative;
 }
 
 td,th{
@@ -29,11 +30,18 @@ tbody > tr:nth-child(odd){
 
 tbody > tr:hover{
     background-color: burlywood;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 thead, tfoot{
     background-color: grey;
     color: white;
+}
+thead > tr > th{
+    position: sticky;
+    top: -1px;
+    background-color: grey;
 }
 caption{
     font-size: 1.5em;
@@ -172,6 +180,23 @@ caption{
             </tr>
         </tfoot>
     </table>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora porro natus quibusdam dicta accusantium molestias voluptate nihil consequuntur maxime sunt, accusamus sint maiores sapiente repellat illo, non eligendi aut ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla inventore dolore, vel placeat repellendus voluptatibus delectus ea, neque ullam ducimus recusandae hic omnis saepe possimus enim sunt assumenda animi. Eligendi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum explicabo hic, sint veritatis veniam sequi magni blanditiis at sed aut soluta aliquid accusamus id excepturi vel eius, eveniet provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quas nihil quae iusto dicta deserunt suscipit odio? Libero ipsam quidem, maiores mollitia nulla, optio, fugit nisi nesciunt adipisci assumenda quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto explicabo aut veniam, animi sapiente, officiis harum cum rem iusto suscipit excepturi esse. Id vitae distinctio tempora aliquam culpa eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia iste optio sunt incidunt, dignissimos eos blanditiis maxime? Suscipit sed eos quo animi quos, molestias ratione ut repellat sit nesciunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora porro natus quibusdam dicta accusantium molestias voluptate nihil consequuntur maxime sunt, accusamus sint maiores sapiente repellat illo, non eligendi aut ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla inventore dolore, vel placeat repellendus voluptatibus delectus ea, neque ullam ducimus recusandae hic omnis saepe possimus enim sunt assumenda animi. Eligendi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum explicabo hic, sint veritatis veniam sequi magni blanditiis at sed aut soluta aliquid accusamus id excepturi vel eius, eveniet provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quas nihil quae iusto dicta deserunt suscipit odio? Libero ipsam quidem, maiores mollitia nulla, optio, fugit nisi nesciunt adipisci assumenda quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto explicabo aut veniam, animi sapiente, officiis harum cum rem iusto suscipit excepturi esse. Id vitae distinctio tempora aliquam culpa eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia iste optio sunt incidunt, dignissimos eos blanditiis maxime? Suscipit sed eos quo animi quos, molestias ratione ut repellat sit nesciunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora porro natus quibusdam dicta accusantium molestias voluptate nihil consequuntur maxime sunt, accusamus sint maiores sapiente repellat illo, non eligendi aut ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla inventore dolore, vel placeat repellendus voluptatibus delectus ea, neque ullam ducimus recusandae hic omnis saepe possimus enim sunt assumenda animi. Eligendi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum explicabo hic, sint veritatis veniam sequi magni blanditiis at sed aut soluta aliquid accusamus id excepturi vel eius, eveniet provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quas nihil quae iusto dicta deserunt suscipit odio? Libero ipsam quidem, maiores mollitia nulla, optio, fugit nisi nesciunt adipisci assumenda quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto explicabo aut veniam, animi sapiente, officiis harum cum rem iusto suscipit excepturi esse. Id vitae distinctio tempora aliquam culpa eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia iste optio sunt incidunt, dignissimos eos blanditiis maxime? Suscipit sed eos quo animi quos, molestias ratione ut repellat sit nesciunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora porro natus quibusdam dicta accusantium molestias voluptate nihil consequuntur maxime sunt, accusamus sint maiores sapiente repellat illo, non eligendi aut ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla inventore dolore, vel placeat repellendus voluptatibus delectus ea, neque ullam ducimus recusandae hic omnis saepe possimus enim sunt assumenda animi. Eligendi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum explicabo hic, sint veritatis veniam sequi magni blanditiis at sed aut soluta aliquid accusamus id excepturi vel eius, eveniet provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quas nihil quae iusto dicta deserunt suscipit odio? Libero ipsam quidem, maiores mollitia nulla, optio, fugit nisi nesciunt adipisci assumenda quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto explicabo aut veniam, animi sapiente, officiis harum cum rem iusto suscipit excepturi esse. Id vitae distinctio tempora aliquam culpa eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia iste optio sunt incidunt, dignissimos eos blanditiis maxime? Suscipit sed eos quo animi quos, molestias ratione ut repellat sit nesciunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora porro natus quibusdam dicta accusantium molestias voluptate nihil consequuntur maxime sunt, accusamus sint maiores sapiente repellat illo, non eligendi aut ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla inventore dolore, vel placeat repellendus voluptatibus delectus ea, neque ullam ducimus recusandae hic omnis saepe possimus enim sunt assumenda animi. Eligendi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum explicabo hic, sint veritatis veniam sequi magni blanditiis at sed aut soluta aliquid accusamus id excepturi vel eius, eveniet provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quas nihil quae iusto dicta deserunt suscipit odio? Libero ipsam quidem, maiores mollitia nulla, optio, fugit nisi nesciunt adipisci assumenda quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto explicabo aut veniam, animi sapiente, officiis harum cum rem iusto suscipit excepturi esse. Id vitae distinctio tempora aliquam culpa eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia iste optio sunt incidunt, dignissimos eos blanditiis maxime? Suscipit sed eos quo animi quos, molestias ratione ut repellat sit nesciunt!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora porro natus quibusdam dicta accusantium molestias voluptate nihil consequuntur maxime sunt, accusamus sint maiores sapiente repellat illo, non eligendi aut ratione. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla inventore dolore, vel placeat repellendus voluptatibus delectus ea, neque ullam ducimus recusandae hic omnis saepe possimus enim sunt assumenda animi. Eligendi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt laborum explicabo hic, sint veritatis veniam sequi magni blanditiis at sed aut soluta aliquid accusamus id excepturi vel eius, eveniet provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quas nihil quae iusto dicta deserunt suscipit odio? Libero ipsam quidem, maiores mollitia nulla, optio, fugit nisi nesciunt adipisci assumenda quisquam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto explicabo aut veniam, animi sapiente, officiis harum cum rem iusto suscipit excepturi esse. Id vitae distinctio tempora aliquam culpa eveniet! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quia iste optio sunt incidunt, dignissimos eos blanditiis maxime? Suscipit sed eos quo animi quos, molestias ratione ut repellat sit nesciunt!</p>
 </body>
 </html>
